# local-mem

./: .gitignore  CLAUDE.md  Dockerfile  EXAMPLES.md  Makefile  QUICKSTART.md  README.md  README_PYTHON.md  VSCODE_SETUP.md  docker-compose.temporal.yml  docker-compose.yml  mcp-config.example.json  package-lock.json  package.json  pyproject.toml  tsconfig.json
local_mem.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
scripts/: close-bead.sh  docker-deploy.sh  list-beads.sh  start-bead.sh  test-docker.sh
src/: __init__.py  cli.py  cli.ts  heuristics.py  index.ts  search.py  server.py  storage.py  storage.ts  templates.py  test.ts  types.py  types.ts  web.py  worker.py
src/indexers/: __init__.py  github_indexer.py  local_repo_indexer.py  microsoft_auth.py  outlook_indexer.py  teams_indexer.py
src/workflows/: __init__.py  activities.py  client.py  data.py  workflows.py
tests/: __init__.py  test_search.py  test_server.py  test_storage.py  test_templates.py  test_types.py
tests/e2e/: __init__.py  conftest.py  test_api_integration.py  test_dashboard.py
